--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,9 @@ ScaffoldingReadMe.txt
 # StyleCop
 StyleCopReport.xml
 
+# ASP.NET developer settings
+appsettings.Development.json
+
 # Files built by Visual Studio
 *_i.c
 *_p.c
